--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://myusername.github.io/my-app",
+  "homepage": "https://madhu00007.github.io/redwolf-clothing",
   "name": "redwolf",
   "type": "module",
   "version": "1.0.0",
